--- a/05_express框架/package.json
+++ b/05_express框架/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/louis61619/Buffer#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   }
 }
